--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -2,9 +2,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    min-height: 100vh;
     width: 100%;
-  }
+}
   
   .content{
     display: flex;
@@ -290,4 +289,16 @@
 
   .clipboardbutton{
     width: 30%;
+  }
+
+  @media (max-width: 700px) {
+    .mrow{
+      display: flex;
+      flex-direction: column;
+    }
+
+    .mcol{
+      width: 100%;
+      margin-bottom: 20px;
+    }
   }
