Added profiles and quota

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -267,7 +267,7 @@
   }
 
   .mcol{
-    width: 48%;
+    width: 100%;
   }
 
   .submitrow{
@@ -302,3 +302,7 @@
       margin-bottom: 20px;
     }
   }
+
+.tokenalert{
+  margin-top: 20px;
+}
