--- a/pages/company/edit.company.module.scss
+++ b/pages/company/edit.company.module.scss
@@ -28,6 +28,11 @@
         font-size: 60px;
         font-weight: bold;
     }
+
+    .quotaprogress{
+        width: 80%;
+        margin-top: 50px;
+    }
 }
 
 .buttonrow{
