--- a/pages/profiles/list.profiles.module.scss
+++ b/pages/profiles/list.profiles.module.scss
@@ -43,3 +43,11 @@
     flex-direction: row;
     justify-content: center;
 }
+
+.stepformcontent{
+    margin-top: 25px;
+}
+
+.hidden {
+    display: none;
+}
