feat: Added google login, refactored register

--- a/pages/forgot/password/password.forgot.module.scss
+++ b/pages/forgot/password/password.forgot.module.scss
@@ -51,6 +51,8 @@
             font-size: 16px;
             line-height: 24px;
             margin-bottom: 32px;
+            width: 720px;
+            text-align: center;
         }
 
         .loginform {
@@ -108,20 +110,26 @@
             }
         }
 
-    }
-
-    .googleloginbutton{
-        width: 360px;
-        height: 44px;
-        margin-bottom: 32px;
-
-        button {
-            width: 360px;
-            height: 44px;
+        .passwordresetnotice {
             font-weight: 700;
-            font-size: 16px;
-            line-height: 24px;
-            padding: 10px 18px 10px 18px;
         }
+
+        .passwordresetsubtitle{
+            font-size: 14px;
+        }
+
+        .backlink {
+            margin-top: 32px;
+
+            a {
+                width: 360px;
+                height: 44px;
+                font-weight: 700;
+                font-size: 16px;
+                line-height: 24px;
+                padding: 10px 18px 10px 18px;
+            }
+        }
+
     }
 }
