feat: Copyright notice

--- a/pages/forgot/password/password.forgot.module.scss
+++ b/pages/forgot/password/password.forgot.module.scss
@@ -23,7 +23,7 @@
 
 
 .logincontainer{
-    height: 100vh;
+    height: 96vh;
     display: flex;
     flex-direction: column;
 
@@ -132,4 +132,11 @@
         }
 
     }
+}
+
+.copyrightfooter{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    color: #475467;
 }
