--- a/pages/login/login.module.scss
+++ b/pages/login/login.module.scss
@@ -23,7 +23,7 @@
 
 
 .logincontainer{
-    height: 100vh;
+    height: 96vh;
     display: flex;
     flex-direction: column;
 
@@ -124,4 +124,11 @@
             padding: 10px 18px 10px 18px;
         }
     }
+}
+
+.copyrightfooter{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    color: #475467;
 }
