--- a/pages/register/register.module.scss
+++ b/pages/register/register.module.scss
@@ -23,7 +23,7 @@
 
 
 .logincontainer{
-    height: 100vh;
+    height: 96vh;
     display: flex;
     flex-direction: column;
 
@@ -128,4 +128,13 @@
         }
 
     }
+}
+
+.copyrightfooter{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    color: #475467;
+
+    margin-bottom: 16px;
 }
