--- a/pages/dialogue/index.module.scss
+++ b/pages/dialogue/index.module.scss
@@ -1,10 +1,163 @@
 .main {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     width: 100%;
+    background-color: #fff;
+
+    .welcomemessage {
+      margin-bottom: 25px;
+
+      .welcomeseperator{
+        margin-top: 25px;
+        margin-bottom: 0px;
+        border-color: #D0D5DD;
+        color: #D0D5DD;
+        background-color: #D0D5DD;
+      }
+    }
+
+    .userinputformcontainer{
+      .userinputform{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+
+        .userinputcardmain{
+          width: 60%;
+          border-radius: 12px 0px 0px 0px;
+          border-color: #EAECF0;
+        }
+
+        .userinputcardsub{
+          width: 40%;
+          border-left-width: 0px;
+          border-radius: 0px 12px 0px 0px;
+          border-color: #EAECF0;
+        }
+
+        .formpart{
+          font-weight: 700;
+          line-height: 20px;
+          size: 14px;
+          letter-spacing: 1%;
+
+          .forminput{
+            background-color: white;
+            padding: 10px 14px 10px 14px;
+            border-radius: 8px;
+            box-shadow: 0px 1px 2px 0px #1018280D;
+            border-color: #D0D5DD;
+          }
+
+          .formselect{
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0px 1px 2px 0px #1018280D;
+            border-color: #D0D5DD;
+          }
+        }
+      }
+
+      .answer{
+        white-space: pre-line;
+      }
+
+      .clipboardextra{
+        color: #667085;
+        padding: 6px 12px 6px 12px;
+        border-radius: 8px;
+
+        .clipboardicon {
+          font-size: 18px;
+          margin-right: 2px;
+        }
+
+        .clipboardicon > svg{
+          transform: translate(-1px, 0px);
+          fill: transparent;
+          color: inherit;
+          stroke: inherit;
+        }
+
+        &:hover{
+          cursor: pointer;
+          background-color: #F2F4F7;
+        }
+      }
+
+      .answercard{
+        border-radius: 12px 12px 0px 0px;
+      }
+
+      .tokeninfo{
+        background-color: #F2F4F7;
+        padding: 12px;
+        width: 330px;
+        border-radius: 8px;
+        margin-top: 30px;
+        font-weight: 700;
+        color: #344054;
+
+        .infoicon {
+          width: 22px;
+          height: 22px;
+          font-size: 18px;
+        }
+
+        .infoicon > svg{
+          transform: translate(-1px, 2px);
+          fill: transparent;
+          color: inherit;
+          stroke: inherit;
+        }
+      }
+
+      
+    }
+
+    .hiddencontainer{
+      display: none;
+    }
+
+    .formfootercontainer{
+      border-width: 0px 1px 1px 1px;
+      border-style: solid;
+      border-color: #EAECF0;
+      height: 100px;
+      border-radius: 0px 0px 12px 12px;
+
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+
+      .generatebuttonrow{
+        width: 360px;
+        height: 44px;
+        
+        button {
+            width: 360px;
+            height: 44px;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 24px;
+            padding: 10px 18px 10px 18px;
+
+            .buttonicon > svg{
+              transform: translate(-1px, 4px);
+              fill: transparent;
+              color: inherit;
+              stroke: inherit;
+          }
+        }
+    }
+    }
 }
-  
+
+.ant-select-selection-item{
+  font-size: 14px;
+}
+
   .content{
     display: flex;
     flex-direction: row;
