--- a/pages/globals.css
+++ b/pages/globals.css
@@ -101,8 +101,24 @@
       color-scheme: dark;
     }
   }
+
+  .ant-layout{
+    background-color: #fff;
+  }
+
+  .ant-layout-footer{
+    background-color: #fff;
+  }
   
-  .ant-layout-sider-children {
-    position: fixed !important;
-    width: 80px !important;
+.ant-layout-sider-children {
+  position: fixed !important;
+  width: 80px !important;
+}
+
+.ant-select-selection-item-content{
+  font-size: 14px;
+}
+
+.ant-select-selection-item{
+  font-size: 14px;
 }
