--- a/components/Sidebar/sidebar.module.scss
+++ b/components/Sidebar/sidebar.module.scss
@@ -35,6 +35,10 @@
                 justify-content: center;
                 align-items: center;
                 margin-top: 20px;
+
+                &:hover{
+                    cursor: pointer;
+                }
             }
         }
     }
@@ -46,9 +50,55 @@
             background: white;
         }
     }
-
-
     
+}
+
+.avatarmenu{
+    .profile {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    
+        .profileinfo {
+            margin-left: 10px;
+        }
+    }
+
+    .menudivider {
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .iconlink{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        border-radius: 8px;
+        padding-left: 16px;
+        padding-right: 6px;
+        width: 100%;
+        margin-top: 10px;
+
+        .linkwrapper{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
+
+        .iconlinktext{
+            margin-left: 25px;
+        }
+    }
+
+    >*{
+        border-radius: 8px;
+        padding-left: 6px;
+        padding-right: 6px;
+    }
+
+    >:hover {
+        cursor: pointer;
+    }
 }
 
 .sidebariconsvg > svg{
