--- a/pages/company/edit.company.module.scss
+++ b/pages/company/edit.company.module.scss
@@ -1,54 +1,93 @@
-.row{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
+.main {
+    .companyoverview {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
 
-.spacelayout{
-    width: 100%;
-}
+        .companysettings{
+            width: 50%;
+            border-radius: 12px 0px 0px 12px;
+        }
 
+        .tokeninformation{
+            width: 50%;
+            border-radius: 0px 12px 12px 0px;
 
-.editcol{
-    width: 48%;
-}
+            .quotatitle{
+                margin-bottom: 12px;
+            }
 
-.finishformrow{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
+            .quotainfo{
+                display: flex;
+                flex-direction: row;
 
-.quotarow{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+                .quotainfotext{
+                    margin-left: 12px;
+                }
+            }
 
-    .quota {
-        font-size: 60px;
-        font-weight: bold;
+            .upgrade{
+                margin-top: 12px;
+                text-align: center;
+            }
+        }
+
+        .finishformrow{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
+
+        .successrow{
+            margin-bottom: 20px;
+        }
+        
+        .errorrow{
+            margin-bottom: 25px;
+        }
+
+        .quotarow{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+        
+            .quota {
+                font-size: 60px;
+                font-weight: bold;
+            }
+        
+            .quotaprogress{
+                margin-top: 50px;
+            }
+        }
     }
 
-    .quotaprogress{
-        width: 80%;
-        margin-top: 50px;
+    .companyusers{
+        margin-top: 32px;
     }
 }
 
-.buttonrow{
-    margin-bottom: 20px;
-}
 
-.modalbuttonrow{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
+.formpart{
+    font-weight: 700;
+    line-height: 20px;
+    size: 14px;
+    letter-spacing: 1%;
 
-.successrow{
-    margin-bottom: 20px;
-}
+    .forminput{
+      background-color: white;
+      padding: 10px 14px 10px 14px;
+      border-radius: 8px;
+      box-shadow: 0px 1px 2px 0px #1018280D;
+      border-color: #D0D5DD;
+    }
 
-.errorrow{
-    margin-bottom: 25px;
-}
+    .formselect{
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0px 1px 2px 0px #1018280D;
+      border-color: #D0D5DD;
+      font-weight: normal;
+    }
+}     
