--- a/pages/dialog/index.module.scss
+++ b/pages/dialog/index.module.scss
@@ -123,17 +123,18 @@
       border-width: 0px 1px 1px 1px;
       border-style: solid;
       border-color: #EAECF0;
-      height: 100px;
+      min-height: 100px;
       border-radius: 0px 0px 12px 12px;
 
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
 
       .generatebuttonrow{
         width: 360px;
         height: 44px;
+        margin-bottom: 10px;
         
         button {
             width: 360px;
@@ -458,4 +459,5 @@
 
 .tokenalert{
   margin-top: 20px;
+  margin-bottom: 20px;
 }
