--- a/pages/usage/usage.module.scss
+++ b/pages/usage/usage.module.scss
@@ -3,10 +3,11 @@
         width: 100%;
         display: flex;
         flex-direction: row;
+        margin-bottom: 32px;
 
         .tokeninformation{
-            width: 100%;
-            border-radius: 12px;
+            width: 50%;
+            border-radius: 12px 0px 0px 12px;
 
             .tokeninfocard{
                 display: flex;
@@ -25,25 +26,54 @@
                         margin-left: 12px;
                     }
                 }
-    
-                .planinformation{
-                    width: 100%;
+            }
+
+            .generatebuttonrow{
+                width: 100%;
+                height: 44px;
+                margin-bottom: 10px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                
+                button {
+                    width: 360px;
+                    height: 44px;
+                    font-weight: 700;
+                    font-size: 16px;
+                    line-height: 24px;
+                    padding: 10px 18px 10px 18px;
+        
+                    .buttonicon > svg{
+                      transform: translate(-1px, 4px);
+                      fill: transparent;
+                      color: inherit;
+                      stroke: inherit;
+                  }
+                }
+            }
+        }
+
+        .tokenusage{
+            width: 50%;
+            border-radius: 0px 12px 12px 0px;
+
+            .tokeninfocard{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+
+                .usageinfo{
                     display: flex;
                     flex-direction: row;
                     justify-content: center;
 
-                    .quotainfolist {
+                    .barcontainer{
                         width: 100%;
+                        height: 300px;
                     }
-    
-                    
                 }
-
-                .upgrade{
-                    margin-top: 12px;
-                    text-align: center;
-                }
-            } 
+            }
         }
 
         .finishformrow{
@@ -65,10 +95,14 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
+            margin-bottom: 50px;
+
+            
         
-            .quota {
+            .tokenbudget {
                 font-size: 60px;
                 font-weight: bold;
+                margin-top: 50px;
             }
         
             .quotaprogress{
