--- a/pages/globals.css
+++ b/pages/globals.css
@@ -122,3 +122,179 @@
 .ant-select-selection-item{
   font-size: 14px;
 }
+
+
+
+.orderdetails {
+  color: #000;
+  font-size: 14px;
+}
+
+
+.companyinfo {
+  width: 300px;
+  border-bottom: #000 1px solid;
+}
+
+.companyheader > td{
+  
+  font-size: 12px;
+  color: #000;
+}
+
+.customerheader > td{
+  color: #000;
+}
+
+
+
+
+
+
+@media print {
+  .invoice-box {
+    max-width: unset;
+    box-shadow: none;
+    border: 0px;
+  }
+}
+
+.invoice-box {
+  max-width: 800px;
+  margin: auto;
+  padding: 30px;
+  border: 1px solid #eee;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+  font-size: 16px;
+  line-height: 24px;
+  font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;
+}
+
+.invoice-box table {
+  width: 100%;
+  line-height: inherit;
+  text-align: left;
+  border-spacing: 0px;
+  border-collapse: separate;
+}
+
+.postable{
+  border-bottom: #000 1px solid;
+}
+
+.itemname{
+  font-weight: 700;
+}
+
+.invoice-box table td {
+  padding: 5px;
+  vertical-align: top;
+}
+
+.invoice-box table tr.top table td {
+  padding-bottom: 20px;
+}
+
+.invoice-box table tr.top table td.title {
+  font-size: 45px;
+  line-height: 45px;
+}
+
+.invoice-box table tr.information table td {
+  padding-bottom: 5px;
+}
+
+.invoice-box table tr.heading td {
+  font-weight: bold;
+  font-size: 14px;
+  border-bottom: #000 1px solid;
+}
+
+.invoice-box table tr.details td {
+  padding-bottom: 20px;
+}
+
+.invoice-box table tr.item td {
+  border-bottom: 1px solid #eee;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 14px;
+}
+
+.invoice-box table tr.item.last td {
+  border-bottom: none;
+}
+
+.invoice-box table tr.total td:nth-child(2) {
+  font-weight: bold;
+}
+
+@media only screen and (max-width: 600px) {
+  .invoice-box table tr.top table td {
+      width: 100%;
+      display: block;
+      text-align: center;
+  }
+
+  .invoice-box table tr.information table td {
+      width: 100%;
+      display: block;
+      text-align: center;
+  }
+}
+
+/** RTL **/
+.invoice-box.rtl {
+  direction: rtl;
+  font-family: Tahoma, 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;
+}
+
+.invoice-box.rtl table {
+  text-align: right;
+}
+
+.invoice-box.rtl table tr td:nth-child(2) {
+  text-align: left;
+}
+
+.totalrow{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-right: 50px;
+  font-size: 16px;
+}
+
+.steuerrow {
+  font-size: 14px;
+}
+
+.totalcell{
+  width: 300px;
+  border-bottom: #000 1px solid;
+  padding-left: 0px !important;
+  padding-right: 0px;
+}
+
+.totalcell > .totalrow {
+  padding-left: 50px;
+}
+
+.final{
+  font-weight: 700;
+  padding-top: 20px;
+  width: 400px;
+  border-bottom: #000 1px solid;
+}
+
+.invoicespacer{
+  height: 490px;
+}
+
+.invoiceFooter{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 10px;
+  line-height: 14px;
+}
