--- a/pages/usage/usage.module.scss
+++ b/pages/usage/usage.module.scss
@@ -135,4 +135,13 @@
       border-color: #D0D5DD;
       font-weight: normal;
     }
-}     
+}
+
+.actionrow{
+    display: flex;
+    flex-direction: row;
+
+    .singleaction {
+        margin-right: 10px;
+    }
+}
