feat: first iteration of account page added

--- a/components/Sidebar/sidebar.module.scss
+++ b/components/Sidebar/sidebar.module.scss
@@ -55,6 +55,11 @@
 }
 
 .avatarmenu{
+
+    .accountlink{
+        display: flex;
+    }
+    
     .profile {
         display: flex;
         flex-direction: row;
