--- a/pages/company/edit.company.module.scss
+++ b/pages/company/edit.company.module.scss
@@ -95,6 +95,10 @@
         }
     }
 
+    .companyorders{
+        margin-top: 32px;
+    }
+
     .companyusers{
         margin-top: 32px;
     }
