--- a/pages/thankyou/thankyou.module.scss
+++ b/pages/thankyou/thankyou.module.scss
@@ -16,6 +16,11 @@
         justify-content: center;
         width: 100%;
 
+        .buttongroup{
+            display: flex;
+            flex-direction: column;
+        }
+
         .backbutton {
             button {
                 width: 360px;
@@ -25,6 +30,10 @@
                 line-height: 24px;
                 padding: 10px 18px 10px 18px;
                 font-weight: bold;
+            }
+
+            .backnow{
+                margin-bottom: 16px;
             }
         }
     }
