--- a/pages/upgrade/upgrade.module.scss
+++ b/pages/upgrade/upgrade.module.scss
@@ -4,44 +4,86 @@
     flex-direction: column;
     justify-content: center;
 
+    .logorow{
+        height: 10vh;
+        margin: 20px;
+    }
+
     .cardrow{
         display: flex;
-        flex-direction: row;
-        justify-content: center;
+        flex-direction: column;
+        align-items: center;
         display: 100%;
 
+        .headline{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 12px;
+            margin-bottom: 32px;
+
+            .subheadline{
+                color: #475467;
+            }
+        }
+
         .quoatacard{
-            width: 40%;
+            width: 446px;
             min-width: 400px;
             border-radius: 12px;
             flex-direction: column;
             border: 1px  solid rgb(217, 217, 217);
+            background-color: #F9FAFB;
+
+            .tokendivider{
+                height: 2px;
+                background: #EAECF0;
+            }
 
             .tokenslideritem{
                 display: flex;
                 flex-direction: column;
                 padding-left: 16px;
                 padding-right: 16px;
+
+                .tokenslider{
+                    color: #1478FD;
+                }
                 
             }
     
             .tokenrow {
                 display: flex;
-                flex-direction: row;
+                flex-direction: column;
                 justify-content: center;
     
-                margin-top: 32px;
-                margin-bottom: 32px;
+                margin-bottom: 25px;
     
                 .tokens{
-                    font-size: 50px;
+                    font-size: 24px;
                     font-weight: 700;
+                    text-align: center;
+                }
+
+                .tokeninfo{
+                    font-size: 16px;
+                    color: #475467;
                     text-align: center;
                 }
             }
 
             .details {
-                font-size: 18px;
+                font-size: 16px;
+
+                .singledetail{
+                    color: #475467;
+                    .detailhighlight {
+                        color: black;
+                        font-weight: 700;
+                        margin-left: 8px;
+                    }
+                }
 
                 .listicon{
                     margin-right: 10px;
@@ -69,60 +111,88 @@
                     }
                 }
             }
-    
-    
-            .buyrow{
-                .buybuttonrow{
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-                    margin-top: 32px;
+        }
 
-                    .buybutton{
-                        margin-bottom: 20px;
-                        button {
-                            width: 360px;
-                            height: 44px;
-                            font-weight: 700;
-                            font-size: 16px;
-                            line-height: 24px;
-                            padding: 10px 18px 10px 18px;
-                            font-weight: bold;
-                        }
+        .buyrow{
+            width: 446px;
+            margin-top: 32px;
+            .buybuttonrow{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                margin-top: 32px;
+
+                .buybutton{
+                    margin-bottom: 20px;
+                    button {
+                        width: 446px;
+                        height: 44px;
+                        font-weight: 700;
+                        font-size: 16px;
+                        line-height: 24px;
+                        padding: 10px 18px 10px 18px;
+                        font-weight: bold;
                     }
                 }
+            }
 
-                .checkouttable{
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: space-between;
-                    padding-right: 32px;
+            .checkout{
+                width: 100%;
+                .checkoutheadline{
+                    font-size: 20px;
+                    font-weight: 700;
+                    margin-bottom: 24px;
+                }
 
-                    .topic{
-                        display: flex;
-                        flex-direction: column;
-
-                        .sumtext{
-                            font-weight: 700;
-                            font-size: 16px;
-                        }
-
-                        .sumsubtitle{
-                            font-size: 11px;
-                            color: lightgray
-                        }
+                .savings {
+                    font-size: 16px;
+    
+                    .singlesaving{
+                        color: #475467;
+                        margin-bottom: 24px;
                         
+                        .savinghighlight {
+                            color: black;
+                            font-weight: 700;
+                            margin-left: 8px;
+                        }
                     }
+    
+                    .listicon{
+                        margin-right: 10px;
+                    }
+                }
+            }
 
-                    .value {
+            .checkouttable{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                padding-right: 32px;
+
+                .topic{
+                    display: flex;
+                    flex-direction: column;
+
+                    .sumtext{
                         font-weight: 700;
                         font-size: 16px;
                     }
+
+                    .sumsubtitle{
+                        font-size: 11px;
+                        color: lightgray
+                    }
                     
                 }
+
+                .value {
+                    font-weight: 700;
+                    font-size: 16px;
+                }
+                
             }
-            
         }
     }
 }
