feat: New Icons, Payment resume possibility, new amount of tokens after registration

--- a/pages/company/edit.company.module.scss
+++ b/pages/company/edit.company.module.scss
@@ -164,4 +164,10 @@
       border-color: #D0D5DD;
       font-weight: normal;
     }
-}     
+}
+
+.actionrow {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
