fix: cookie-banner & darkmode

--- a/components/Sidebar/sidebar.module.scss
+++ b/components/Sidebar/sidebar.module.scss
@@ -1,6 +1,7 @@
 .layout{
     min-height: 100vh;
     background-color: #fff;
+    color: black;
 
     .sidebar {
         background-color: #101828;
