--- a/pages/register/register.module.scss
+++ b/pages/register/register.module.scss
@@ -138,3 +138,14 @@
 
     margin-bottom: 16px;
 }
+
+.agbLink{
+    color: #1478FD
+}
+
+.agbCheckbox{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
