--- a/pages/account/account.module.scss
+++ b/pages/account/account.module.scss
@@ -43,6 +43,64 @@
             width: 50%;
         }
     }
+
+    .recommend{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+        margin-top: 32px;
+
+        .recommendcard {
+            width: 50%;
+
+            .recommendContent{
+                display: flex;
+                flex-direction: column;
+
+                .recommendHeadline{
+                    margin-bottom: 16px;
+                }
+
+                .recommendLink{
+                    overflow-wrap: break-word;
+                    text-align: center;
+                    margin-top: 32px;
+                    margin-bottom: 32px;
+                    color: #1677ff;
+
+                    &:hover {
+                        cursor: pointer;
+                        color: #0f4faa;
+                    }
+                }
+
+                .recommendqrcode{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    margin-top: 32px;
+                    margin-bottom: 32px;
+                }
+
+                .downloadQRCode{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+        
+                    button {
+                        width: 360px;
+                        height: 44px;
+                        font-weight: 700;
+                        font-size: 16px;
+                        line-height: 24px;
+                        padding: 10px 18px 10px 18px;
+                        font-weight: bold;
+                    }
+                }
+            }
+        }
+    }
 }
 
 .formrow{
