--- a/pages/account/account.module.scss
+++ b/pages/account/account.module.scss
@@ -101,6 +101,23 @@
             }
         }
     }
+
+    .deleteRow{
+        margin-top: 60px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+
+        button {
+            width: 360px;
+            height: 44px;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 24px;
+            padding: 10px 18px 10px 18px;
+            font-weight: bold;
+        }
+    }
 }
 
 .formrow{
@@ -169,5 +186,57 @@
         line-height: 24px;
         padding: 10px 18px 10px 18px;
         font-weight: bold;
+    }
+}
+
+.reauthform{
+    margin-top: 16px;
+    .loginpart{
+        font-weight: 700;
+        line-height: 20px;
+        size: 14px;
+        letter-spacing: 1%;
+    }
+
+    .logininput{
+        background-color: white;
+        padding: 10px 14px 10px 14px;
+        border-radius: 8px;
+    }
+
+    .reautherrormsg{
+        margin-bottom: 16px;
+    }
+
+    .reauthloginbuttonrow{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+
+        .reauthloginbutton{
+            width: 360px;
+            height: 44px;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 24px;
+            padding: 10px 18px 10px 18px;
+            font-weight: bold;
+        }
+    }
+
+    .deletefinaly{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+
+        button {
+            width: 360px;
+            height: 44px;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 24px;
+            padding: 10px 18px 10px 18px;
+            font-weight: bold;
+        }
     }
 }
