--- a/pages/globals.css
+++ b/pages/globals.css
@@ -90,10 +90,10 @@
     overflow-x: hidden;
   }
   
-  body {
-    /*color: rgb(var(--foreground-rgb));*/
-    /*background-color: rgb(var(--background-start-rgb));*/
-  }
+  /*body {
+    color: rgb(var(--foreground-rgb));
+    background-color: rgb(var(--background-start-rgb));
+  }*/
   
   a {
     color: inherit;
