fix: Client side error
- Improved performance
- Added upload of profile picture
- restructured the sidebar

--- a/pages/account/account.module.scss
+++ b/pages/account/account.module.scss
@@ -6,6 +6,11 @@
     align-items: center;
     margin-top: 32px;
 
+    .uploadavatar{
+        width: 200px;
+        height: 200px;
+    }
+
     .personal { 
         display: flex;
         flex-direction: row;
