--- a/pages/usage/usage.module.scss
+++ b/pages/usage/usage.module.scss
@@ -14,6 +14,12 @@
                 flex-direction: column;
                 justify-content: center;
 
+                .tokeninformation{
+                    font-size: 14px;
+                    color: #8e8e93;
+                    margin-left: 10px;
+                }
+
                 .quotatitle{
                     margin-bottom: 12px;
                 }
@@ -144,4 +150,9 @@
     .singleaction {
         margin-right: 10px;
     }
+}
+
+.listarrow {
+    font-size: 10px;
+    margin-right: 10px;
 }
