--- a/pages/company/edit.company.module.scss
+++ b/pages/company/edit.company.module.scss
@@ -63,6 +63,7 @@
             flex-direction: row;
             justify-content: center;
 
+    
             button {
                 width: 360px;
                 height: 44px;
@@ -70,14 +71,16 @@
                 font-size: 16px;
                 line-height: 24px;
                 padding: 10px 18px 10px 18px;
-    
+
                 .buttonicon > svg{
-                  transform: translate(-1px, 4px);
-                  fill: transparent;
-                  color: inherit;
-                  stroke: inherit;
-              }
+                transform: translate(-1px, 4px);
+                fill: transparent;
+                color: inherit;
+                stroke: inherit;
             }
+            }
+
+            
         }
 
         .successrow{
@@ -170,4 +173,77 @@
 
 .errorrow{
     margin-bottom: 25px;
+}
+
+.memberprofile{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 16px;
+
+    .namecontainer{
+        .usernamecontainer {
+            color: lightgray;
+        }
+
+        .rolecontainer{
+            color: lightgray;
+        }
+    }
+}
+
+.useractions{
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+    font-size: 16px;
+}
+
+.deleteMemberRow{
+    width: 100%;
+    height: 44px;
+    margin-bottom: 10px;
+    margin-top: 32px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
+    button {
+        width: 360px;
+        height: 44px;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 24px;
+        padding: 10px 18px 10px 18px;
+
+        .buttonicon > svg{
+            transform: translate(-1px, 4px);
+            fill: transparent;
+            color: inherit;
+            stroke: inherit;
+        }
+    }
+}
+
+.finisinvite{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    button {
+        width: 360px;
+        height: 44px;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 24px;
+        padding: 10px 18px 10px 18px;
+
+        .buttonicon > svg{
+          transform: translate(-1px, 4px);
+          fill: transparent;
+          color: inherit;
+          stroke: inherit;
+      }
+    }
 }
