--- a/pages/profiles/list.profiles.module.scss
+++ b/pages/profiles/list.profiles.module.scss
@@ -4,7 +4,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 50px;
 }
 
 
@@ -38,7 +37,7 @@
 
 .profilecounter{
     color: darkgray;
-    margin-top: 40px;
+    margin-top: 20px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -72,5 +71,30 @@
       box-shadow: 0px 1px 2px 0px #1018280D;
       border-color: #D0D5DD;
       font-weight: normal;
+    }
+}
+
+
+.addProfileRow{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    
+    button {
+        width: 360px;
+        height: 44px;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 24px;
+        padding: 10px 18px 10px 18px;
+
+        .buttonicon > svg{
+          transform: translate(-1px, 4px);
+          fill: transparent;
+          color: inherit;
+          stroke: inherit;
+      }
     }
 }
