--- a/pages/register/register.module.scss
+++ b/pages/register/register.module.scss
@@ -37,7 +37,8 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 80vh;
+        height: 100vh;
+        margin-bottom: 100px;
 
         .formtitle{
             margin-bottom: 20px;
@@ -136,8 +137,12 @@
     justify-content: center;
     color: #475467;
 
-    margin-bottom: 16px;
     margin-top: 16px;
+    margin-bottom: 16px;
+}
+
+.lowerfooter{
+    margin-top: 140px;
 }
 
 .agbLink{
