--- a/pages/setup/setup.module.scss
+++ b/pages/setup/setup.module.scss
@@ -51,6 +51,7 @@
             font-size: 16px;
             line-height: 24px;
             margin-bottom: 32px;
+            text-align: center;
         }
 
         .stepcontainer{
