--- a/components/Sidebar/sidebar.module.scss
+++ b/components/Sidebar/sidebar.module.scss
@@ -1,6 +1,6 @@
 .layout{
     min-height: 100vh;
-    background-color: #fff;
+    background-color: #F2F4F7;
     color: black;
 
     .sidebar {
@@ -35,7 +35,7 @@
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
-                color: white;
+                color: #F2F4F7;
 
                 &:hover {
                     cursor: pointer;
@@ -64,8 +64,10 @@
     .layoutcontent{
 
         .childrencontainer{
-            padding: 30px;
-            background: white;
+            padding-top: 30px;
+            padding-left: 30px;
+            padding-right: 30px;
+            background: #F2F4F7;
         }
     }
     
