--- a/pages/dialog/index.module.scss
+++ b/pages/dialog/index.module.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    background-color: #fff;
 
     .welcomemessage {
       margin-bottom: 25px;
@@ -18,7 +17,6 @@
         margin-bottom: 0px;
         border-color: #D0D5DD;
         color: #D0D5DD;
-        background-color: #D0D5DD;
       }
     }
 
@@ -131,6 +129,7 @@
       border-color: #EAECF0;
       min-height: 100px;
       border-radius: 0px 0px 12px 12px;
+      background-color: white;
 
       display: flex;
       flex-direction: column;
