--- a/pages/globals.css
+++ b/pages/globals.css
@@ -108,12 +108,12 @@
 
   .ant-layout{
     /*background-color: rgb(var(--background-start-rgb));*/
-    background-color: white;
+    background-color: #F2F4F7;
   }
 
   .ant-layout-footer{
     /*background-color: rgb(var(--background-start-rgb));*/
-    background-color: white;
+    background-color: #F2F4F7;
   }
   
 .ant-layout-sider-children {
