--- a/pages/monolog/index.module.scss
+++ b/pages/monolog/index.module.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    background-color: #fff;
 
     .welcomemessage {
       margin-bottom: 25px;
@@ -131,6 +130,7 @@
       border-color: #EAECF0;
       min-height: 100px;
       border-radius: 0px 0px 12px 12px;
+      background-color: white;
 
       display: flex;
       flex-direction: column;
