--- a/pages/profiles/list.profiles.module.scss
+++ b/pages/profiles/list.profiles.module.scss
@@ -11,6 +11,22 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+
+    button {
+        width: 360px;
+        height: 44px;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 24px;
+        padding: 10px 18px 10px 18px;
+
+        .buttonicon > svg{
+          transform: translate(-1px, 4px);
+          fill: transparent;
+          color: inherit;
+          stroke: inherit;
+      }
+    }
 }
 
 .errorrow{
