--- a/components/AssistantCard/assistantcard.module.scss
+++ b/components/AssistantCard/assistantcard.module.scss
@@ -3,9 +3,12 @@
     display: flex;
     flex-direction: column;
 
+
     .servicecard{
         border-radius: 12px 12px 0px 0px;
         border-bottom-color: #fff;
+        box-shadow: 0px -1px 2px 0px #1018280F;
+        box-shadow: 0px -1px 3px 0px #1018281A;
     }
 
     .serviceheadline{
@@ -53,6 +56,8 @@
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
+        box-shadow: 0px 1px 2px 0px #1018280F;
+        box-shadow: 0px 1px 3px 0px #1018281A;
 
         .fav {
             font-size: 20px;
