feat: Apps are now in the database and favable

--- a/components/RecommendBox/recommendbox.module.scss
+++ b/components/RecommendBox/recommendbox.module.scss
@@ -28,7 +28,7 @@
         align-items: center;
 
         font-size: 24px;
-        color: #cc2f26;
+        color: #F24E1E;
     }
 
     .recommendexplanation{
