fix: Nonexisting profiles will be replaced by the main profile

--- a/pages/profiles/list.profiles.module.scss
+++ b/pages/profiles/list.profiles.module.scss
@@ -7,10 +7,18 @@
 }
 
 
+.deletecontainer{
+    display: flex;
+    flex-direction: column;
+    
+    
+}
+
 .finishformrow{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
 
     button {
         width: 360px;
