--- a/components/FatButton/fatbutton.module.scss
+++ b/components/FatButton/fatbutton.module.scss
@@ -7,13 +7,27 @@
     justify-content: center;
     align-items: center;
 
-    button {
-        width: 360px;
-        height: 44px;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 24px;
-        padding: 10px 18px 10px 18px;
-        font-weight: bold;
+    @media(max-width: 992px){
+        button {
+            width: 200px;
+            height: 44px;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 24px;
+            padding: 10px 18px 10px 18px;
+            font-weight: bold;
+        }
+    }
+    
+    @media(min-width: 993px){
+        button {
+            width: 446px;
+            height: 44px;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 24px;
+            padding: 10px 18px 10px 18px;
+            font-weight: bold;
+        }
     }
 }
